[tool.poetry]
name = "pynwb-streaming-benchmark"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pynwb = "^2.5.0"
remfile = "^0.1.9"
fsspec = "^2023.12.2"
requests = "^2.31.0"
aiohttp = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
